02_code1/grade.txt
Grading at Wed Aug 26 07:17:43 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘max’:
temp.c:13:2: error: ISO C forbids nested functions [-Werror=pedantic]
  int main(void)
  ^
temp.c:13:6: error: ‘main’ is normally a non-static function [-Werror=main]
  int main(void)
      ^
temp.c:21:1: error: expected declaration or statement at end of input
 }
 ^
temp.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
